Correct spacing

--- a/src/less/material/login-screen.less
+++ b/src/less/material/login-screen.less
@@ -3,7 +3,7 @@
     background: #fff;
     .login-screen-title, .list-block, .content-block, .list-block-label {
         max-width: 480px;
-        margin: 25px auto;
+        margin: 24px auto;
     }
     .list-block ul {
         .hairline-remove(top);
@@ -13,6 +13,9 @@
     .list-block-label {
         text-align: center;
     }
+}
+.navbar-fixed .page .login-screen-content {
+    padding-top: 0;
 }
 .login-screen-title {
     text-align: center;
